# NetworthDB

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  compose.yml  sample.env
docs/database/: 0001.drawio
docs/design/: database.dbml  database.drawio
docs/licenses/: CLA_ENTITY  CLA_INDIVIDUAL
src/: composer.rs  lib.rs  main.rs
src/config/: mod.rs  types.rs
src/models/: mod.rs
src/models/custom_entity/: account.rs  mod.rs
src/models/entities/: accounts.rs  imports.rs  mod.rs  sea_orm_active_enums.rs  staged_transactions.rs  transactions.rs
src/models/entity/: accounts.rs  imports.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  staged_transactions.rs  transactions.rs
src/models/helpers/: accounts.rs  imports.rs  mod.rs  staged_transactions.rs  transactions.rs
src/models/manage/: accounts.rs  imports.rs  mod.rs  staged_transactions.rs  transactions.rs
src/models/manage/joins/: accounts_transactions.rs  mod.rs
src/models/migrations/: Cargo.toml  lib.rs  main.rs
src/models/migrations/definitions/: m20220101_000001_init.rs  mod.rs
src/models/writers/: account.rs  mod.rs  statement.rs
src/parsers/: mod.rs  types.rs
src/parsers/sources/: hdfcind.rs  hdfcind_test.rs  icicind.rs  mod.rs
src/reader/: mod.rs  pdf.rs  types.rs  xls.rs
src/readers/: mod.rs  types.rs
src/readers/formats/: mod.rs  pdf.rs  xls.rs
src/readers/parsers/: mod.rs  types.rs
src/readers/parsers/sources/: mod.rs
src/readers/parsers/sources/hdfcind/: mod.rs  tests.rs
src/readers/parsers/sources/icicind/: mod.rs
src/utils/datetime/: mod.rs  tests.rs
src/writers/: statement.rs
