[package]
name = "networth_db"
version = "0.1.0"
edition = "2018"

[dependencies]
calamine = "0.25.0"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
lopdf = { version = "0.34.0", features = ["pom", "pom_parser"] }
regex = "1.11.1"
sea-orm = { version = "1.1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
tokio = "1.41.1"
tracing = "0.1.40"
